--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-countdown": "^2.3.2",
     "react-countup": "^6.1.1",
     "react-csv": "^2.2.2",
+    "react-d3-speedometer": "^1.1.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^18.0.0",
     "react-drag-listview": "^0.1.9",
@@ -66,6 +67,7 @@
     "react-flatpickr": "^3.10.7",
     "react-google-login": "^5.2.2",
     "react-i18next": "^11.15.3",
+    "react-icons": "^4.8.0",
     "react-image-lightbox": "^5.1.4",
     "react-jvectormap": "^0.0.16",
     "react-leaflet": "^4.0.2",
